--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -16,10 +19,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
-    "@solana/web3.js": "^1.95.2",
+    "@solana/web3.js": "^1.98.0",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ed25519-hd-key": "^1.3.0",
     "ethers": "^6.13.2",
@@ -29,8 +32,9 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.4.0",
+    "react-icons": "^5.4.0",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tweetnacl": "^1.0.3"
   },
